--- a/customorders.html
+++ b/customorders.html
@@ -45,7 +45,7 @@
     <div
             class="loading"
             style="
-        background-color: #f8fafc;
+        background-color: #f5f5f5;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
@@ -75,125 +75,24 @@
                 </div>
                 <div class="col-sm-4 col-md-3 col-lg-3 text-center">
                     <div class="dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="outside" type="button">Categories</button>
-                        <div class="dropdown-menu dropdown-menu-dark"><a class="dropdown-item" href="#">Father’s Day Gift Sets</a><a class="dropdown-item" href="#">Christmas Gift Sets</a><a class="dropdown-item" href="#">Cake Trays and Tubs</a></div>
+                        <div class="dropdown-menu dropdown-customorders dropdown-menu-dark"></div>
                     </div>
                 </div>
             </div>
             <div class="row" style="margin-bottom: 23px;">
                 <div class="col-lg-10 offset-lg-1">
-                    <div class="input-group input-group-sm"><span class="input-group-text">Find Designs</span><input class="form-control" type="text" placeholder="Start typing here..."><button class="btn btn-primary" type="button">Search</button></div>
+                    <div class="input-group input-group-sm">
+                        <span class="input-group-text">Find Designs</span>
+                        <input class="form-control" type="text" placeholder="Start typing here...">
+                        <button class="btn search-customorders btn-primary" type="button">Search</button></div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-center" style="font-family: Lobster, serif;padding-bottom: 0px;margin-bottom: 26px;">Father’s Day Gift Sets</h1>
-                </div>
-            </div>
-            <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal1" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial1.jpg" width="330" height="400"></a></div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal2" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial2.jpg" width="330" height="400"></a></div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal3" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial3.jpg"></a></div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal4" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial4.jpg"></a></div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal5" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial5.jpg"></a></div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal6" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial6.jpg"></a></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-center" style="font-family: Lobster, serif;padding-bottom: 0px;margin-bottom: 26px;margin-top: 18px;">Christmas Gift Sets</h1>
-                </div>
-            </div>
-            <div class="row gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3">
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal1" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial1.jpg" width="330" height="400"></a></div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal2" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial2.jpg" width="330" height="400"></a></div>
-                </div>
-                <div class="col-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal3" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial3.jpg"></a></div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal4" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial4.jpg"></a></div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal5" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial5.jpg"></a></div>
-                </div>
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-                    <div class="text-center"><a href="#" data-bs-target="#pictureModal6" data-bs-toggle="modal"><img class="rounded img-fluid fit-cover" style="height: 200px;width: 200px;" src="assets/img/products/Testimonial6.jpg"></a></div>
-                </div>
-            </div>
-        </div><div>
-    <div id="pictureModal1" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial1.jpg" /></div>
-            </div>
+
+            <div class="customorders-db"></div>
         </div>
-    </div>
-    <div id="pictureModal2" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial2.jpg" /></div>
-            </div>
-        </div>
-    </div>
-    <div id="pictureModal3" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial3.jpg" /></div>
-            </div>
-        </div>
-    </div>
-    <div id="pictureModal4" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial4.jpg" /></div>
-            </div>
-        </div>
-    </div>
-    <div id="pictureModal5" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial5.jpg" /></div>
-            </div>
-        </div>
-    </div>
-    <div id="pictureModal6" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="pictureModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header"><button class="btn-close" aria-label="Close" data-bs-dismiss="modal" type="button"></button></div>
-                <div class="modal-body"><img class="img-fluid" alt="Picture" src="assets/img/products/Testimonial6.jpg" /></div>
-            </div>
-        </div>
-    </div>
-</div>
         <div class="d-flex justify-content-center">
             <nav class="text-secondary">
-                <ul class="pagination">
-                    <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true" style="color: var(--bs-body-color);">«</span></a></li>
-                    <li class="page-item" style="color: var(--bs-body-color);"><a class="page-link" href="#" style="color: var(--bs-body-color);">1</a></li>
-                    <li class="page-item" style="color: var(--bs-body-color);"><a class="page-link" href="#" style="color: var(--bs-body-color);">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#" style="color: var(--bs-body-color);">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#" style="color: var(--bs-body-color);">4</a></li>
-                    <li class="page-item"><a class="page-link" href="#" style="color: var(--bs-body-color);">5</a></li>
-                    <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true" style="color: var(--bs-body-color);">»</span></a></li>
+                <ul class="pagination pagination-customorders">
                 </ul>
             </nav>
         </div>
@@ -251,6 +150,7 @@
     <script src="assets/js/Lightbox-Gallery-No-Gutters-baguetteBox.min.js"></script>
     <script src="assets/js/Lightbox-Gallery-No-Gutters-Lightbox-Gallery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="assets/js/customorders.js"></script>
 </body>
 
 </html>
