--- a/blogs.html
+++ b/blogs.html
@@ -74,7 +74,8 @@
         z-index: 9999;
       "
 >
-    <lottie-player src="https://lottie.host/5d1004d2-cceb-47f5-a290-6414e06abc02/TTsvzR1cPv.json" speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+    <lottie-player src="https://lottie.host/5d1004d2-cceb-47f5-a290-6414e06abc02/TTsvzR1cPv.json" speed="1"
+                   style="width: 300px; height: 300px;" loop autoplay></lottie-player>
 </div>
 <section class="clean-block clean-blog-list dark">
     <div class="container">
