--- a/faq.html
+++ b/faq.html
@@ -2,6 +2,15 @@
 <html data-bs-theme="light" lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-108BDB1XQ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-108BDB1XQ0');
+</script>
     <meta charset="utf-8">
     <link rel="icon" type="image/x-icon" href="./assets/img/brands/Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
