--- a/partycarts.html
+++ b/partycarts.html
@@ -121,6 +121,14 @@
                                                         alt="Slide Image"></div>
                         <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart8.jpg"
                                                         alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart9.jpg"
+                                                        alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart10.jpg"
+                                                        alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart11.jpg"
+                                                        alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart12.jpg"
+                                                        alt="Slide Image"></div>
                     </div>
                     <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span
                             class="carousel-control-prev-icon"></span><span
