--- a/partycarts.html
+++ b/partycarts.html
@@ -146,6 +146,10 @@
                         <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="5"></button>
                         <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="6"></button>
                         <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="7"></button>
+                        <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="8"></button>
+                        <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="9"></button>
+                        <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="10"></button>
+                        <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="11"></button> 
                     </div>
                 </div>
             </div>
