--- a/partycarts.html
+++ b/partycarts.html
@@ -121,13 +121,13 @@
                                                         alt="Slide Image"></div>
                         <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart8.jpg"
                                                         alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Cart 9.jpg"
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart9.jpg"
                                                         alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Cart 10.jpg"
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart10.jpg"
                                                         alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Cart 11.jpg"
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart11.jpg"
                                                         alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Cart 12.jpg"
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart12.jpg"
                                                         alt="Slide Image"></div>
                     </div>
                     <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span
