--- a/partycarts.html
+++ b/partycarts.html
@@ -123,7 +123,7 @@
                                                         alt="Slide Image"></div>
                         <div class="carousel-item"><img class="w-100 d-block" src="assets/partycart/cart9.jpg"
                                                         alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/partycart/cart10.jpg.jpg"
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/partycart/cart10.jpg"
                                                         alt="Slide Image"></div>
                         <div class="carousel-item"><img class="w-100 d-block" src="assets/partycart/cart11.jpg"
                                                         alt="Slide Image"></div>
